syntax = "proto3";

package naive_raft;

service AppendEntries {
  rpc AppendEntriesRPC (AppendEntriesReq) returns (AppendEntriesResp) {}
}

service Election {
  rpc ElectionRPC (ElectionReq) returns (ElectionResp){}
}

message LogEntris {
  int32 index = 1;
  int32 term = 2;
  string data = 3; 
}

message AppendEntriesReq {
  int32 term = 1;
  int32 leaderId = 2;
  int32 prevLogIndex = 3;
  int32 prevTermIndex = 4;
  repeated LogEntris LogEntris= 5;
  int32 leaderCommit = 6;
}

message AppendEntriesResp {
  int32 term = 1;
  bool success = 2;
}

message ElectionReq {
  int32 term = 1;
  int32 candidateId = 2;
  int32 lastLogIndex = 3;
  int32 lastLogTerm = 4;
}

message ElectionResp {
  int32 term = 1;
  bool votedGranted = 2;
}